--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>飞屋旅途</title>
+    <title>飞屋民宿</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script
+      type="text/javascript"
+      src="https://api.map.baidu.com/getscript?v=3.0&&type=webgl&ak=5ULqFGqTK1t4hdUZX4NZWhaokOcp5rMM"
+    ></script>
   </body>
 </html>
